squish bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ a:hover {
 	color: white;
 }
 
-p > a:hover {
+p>a:hover {
 	background-color: rgba(0, 0, 0, 0.3);
 	border-radius: 1px;
 }
@@ -58,8 +58,7 @@ code {
 }
 
 .accordion-button:after {
-	/* background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important; */
-	background-image: url("../public/chevron-down-white.svg") !important;
+	background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
 }
 
 .bg-cool::before {
@@ -78,27 +77,53 @@ code {
 /* shoutout to gradient-animator.com for making this so easy */
 .bg-cool {
 	background: linear-gradient(30deg, #258f0a, #2a40d4);
-    background-size: 400% 400%;
+	background-size: 400% 400%;
 
-    -webkit-animation: AnimationName 120s ease infinite;
-    -moz-animation: AnimationName 120s ease infinite;
-    animation: AnimationName 120s ease infinite;
+	-webkit-animation: AnimationName 120s ease infinite;
+	-moz-animation: AnimationName 120s ease infinite;
+	animation: AnimationName 120s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+	0% {
+		background-position: 0% 50%
+	}
+
+	50% {
+		background-position: 100% 50%
+	}
+
+	100% {
+		background-position: 0% 50%
+	}
 }
+
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+	0% {
+		background-position: 0% 50%
+	}
+
+	50% {
+		background-position: 100% 50%
+	}
+
+	100% {
+		background-position: 0% 50%
+	}
 }
+
 @keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+	0% {
+		background-position: 0% 50%
+	}
+
+	50% {
+		background-position: 100% 50%
+	}
+
+	100% {
+		background-position: 0% 50%
+	}
 }
 
 /* EPIC MODE
